--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -256,12 +256,11 @@ a {
   -webkit-transition: border-bottom-color 0.2s ease, color 0.2s ease;
   -ms-transition: border-bottom-color 0.2s ease, color 0.2s ease;
   transition: border-bottom-color 0.2s ease, color 0.2s ease;
-  border-bottom: dotted 3px rgba(255, 255, 255, 0.7);
-  color: #1cb495;
-  text-decoration: none; }
+  border-bottom: solid 2px rgba(255, 255, 255, 0.7);
+  text-decoration: none; 
+  cursor: pointer;}
   a:hover {
     border-bottom-color: transparent;
-    color: #1cb495 !important;
     text-decoration: none; }
 
 strong, b {
